docs/apim/4.7x/hybrid-installation-and-configuration-guides/next-gen-cloud/.zip.md
# .ZIP

## Overview

This guide explains how to install a Hybrid deployment of Gravitee API Management (APIM) using binaries (.ZIP).

## Prerequisites

Before you install a Hybrid Gateway, complete the following steps:

* Ensure that Java 17 is available in the `$PATH`.
* Ensure that you have outbound internet access to Gravitee Cloud Gate (`eu.cloudgate.gravitee.io` or `us.cloudgate.gravitee.io`) over HTTPS (443).
* Install Redis.
* Download the `.zip` binaries from [Gravitee.io Downloads](https://download.gravitee.io/#graviteeio-apim/distributions/).
* Complete the steps in [#prepare-your-installation](./#prepare-your-installation "mention").

## Install Gravitee APIM

1.  Install the APIM Gateway using the following commands:\


    ```bash
    unzip graviteeio-apim-gateway-latest.zip -d /opt/gravitee
    cd /opt/gravitee/graviteeio-apim-gateway-*
    ```


2. Configure the Gateway section of your `gravitee.yml` file:
   1.  To access your `gravitee.yml` file, use the following command:\


       ```bash
       vi config/gravitee.yml
       ```


   2.  Use the following configuration in the Gateway section of `gravitee.yml`:\


       ```yaml
       management:
         type: http

       cloud:
         token: <YOUR-CLOUD-TOKEN>

       ratelimit:
         type: none

       license:
         key: <YOUR-LICENCE-KEY>
       ```



       * Replace `<YOUR-CLOUD-TOKEN>` with your Cloud Token.&#x20;
       * Replace `<YOUR-LICENCE-KEY>` with your Licence Key.\

3.  Start the Gateway using the following command: \


    ```bash
    ./bin/gravitee
    ```


4.  (Optional) To run the Gateway in the background, use the following command: \


    ```bash
    nohup ./bin/gravitee &
    ```

## Verification

*   To verify that the installation was successful, use the following command to confirm registration and `/sync` with Gravitee Cloud:\


    ```bash
    tail -f logs/gravitee.log
    ```
